infra/k8s/policies/allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: default
spec:
  podSelector: {} # Apply to all pods
  policyTypes:
  - Egress
  egress:
  # - to:
  #   - namespaceSelector:
  #       matchLabels:
  #         kubernetes.io/metadata.name: kube-system # CoreDNS lives here
  #     podSelector:
  #       matchLabels:
  #         k8s-app: kube-dns
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
